[gd_scene load_steps=5 format=2]

[ext_resource path="res://common/healthbar/healthbar_under.png" type="Texture" id=1]
[ext_resource path="res://common/healthbar/healthbar_over.png" type="Texture" id=2]
[ext_resource path="res://common/healthbar/healthbar_progress.png" type="Texture" id=3]
[ext_resource path="res://common/healthbar/HealthBar.gd" type="Script" id=4]

[node name="HealthBar" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 304.0
margin_bottom = 21.0
value = 100.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.196078, 0.196078, 0.196078, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthOver" type="TextureProgress" parent="."]
margin_right = 143.0
margin_bottom = 5.0
value = 100.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_under = Color( 1, 1, 1, 0 )
tint_progress = Color( 0.196078, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="FlashTween" type="Tween" parent="."]
